<resources>
    <string name="app_name">Le Thanh Tung</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="Name">Name</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
</resources>
